--- a/Tic_Tac_Toe/style.css
+++ b/Tic_Tac_Toe/style.css
@@ -62,7 +62,13 @@ body{
     font-size: 8vmin;
 }
 .msg-container{
-    height: 30vmin;
+    height: 100vmin;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+
 }
 
 .hide{
