Snake_game completed

--- a/Snake_game/style.css
+++ b/Snake_game/style.css
@@ -4,6 +4,24 @@
     /* box-sizing: border-box; */
 }
 
+#scoreBox{
+    position: absolute;
+    top: 9px;
+    right: 200px;
+    font-size: 39px;
+    font-weight: bold;
+    font-family: 'New Tegomin', serif;
+}
+
+#hiscoreBox{
+    position: absolute;
+    top: 59px;
+    right: 140px;
+    font-size: 39px;
+    font-weight: bold;
+    font-family: 'New Tegomin', serif;
+}
+
 .body{
     background: url(./img/bg.jpg);
     min-height: 100vh;
@@ -25,11 +43,21 @@
     grid-template-rows: repeat(18, 1fr);
 
 }
+.snake{
+    background-color: purple;
+    border: .25vmin solid white;
+    border-radius: 12px;
+}
 
 .head{
-    background-color: red;
+    background: linear-gradient(rgb(240, 124, 124), rgb(228, 228, 129));
+    border: 2px solid rgb(34, 4, 34); 
+    transform: scale(1.02);
+    border-radius: 9px;
 }
 
 .food{
-    background-color: purple;
+    background: linear-gradient(red, purple);
+    border: .25vmin solid black;
+    border-radius: 8px;
 }
